fixed the wrapping of the footer

--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -500,7 +500,7 @@ div.watermark::after {
   text-align: center;
   max-width: 1240px;
   margin: auto;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(4, minmax(300px, 1fr));
   grid-gap: 1rem;
   align-items: center;
   line-height: 18px;
